@@ -594,6 +594,11 @@ RC31:
   o fix for communication with Rutger's SysEx editor: mod matrix direct assignments
     are handled correctly now in stereo edit mode
 
+RC32:
+  o fixed strange Oct display output in Bassline Sequence Editor
+  o added "DEFAULT_ENABLE_UPPER_WAVEFORMS" switch to setup_* files to enable the
+    selection of additional waveforms for SwinSID
+
 
 MEMO:
   - in Bassline mode, CCs could control individual knob parameters for
